[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower-lsp = "0.14.1"
tokio = { version = "1.12.0", features = ["full"] }
serde_json = "1.0.68"
env_logger = "0.9.0"
tower-lsp-macros = "0.4.1"
nom = "7.0.0"
antlr-rust = {path = "antlr-rust"}


[features]

[dev-dependencies]
tower-test = "0.4.0"
